--- a/css/constants.less
+++ b/css/constants.less
@@ -1,5 +1,5 @@
 @basic-font: 16px;
-@font-family: 'Open Sans', sans-serif;
+@font-family: 'PT Sans', 'Open Sans', sans-serif;
 @special-font: 'Bitter', serif;
 @text-color: #111111;
 @super-light-text: #ccc;
@@ -13,7 +13,7 @@
 @input-border: #e1e1e1;
 @grey-fon: #f3f3f3;
 @almost-white: #f6f6f6;
-@grey: #d7d7d7;
+@grey: #9b9b9b;
 @light-grey: #ebebeb;
 @dark-grey: #a0a0a0;
 @new-grey: #d8d8d8;
@@ -23,7 +23,7 @@
 @green2: #3daa35;
 @lime: #8dc63f;
 @orange: #f1592a;
-@blue: #00aeef;
+@blue: #24b8d1;
 @lime: #8dc63f;
 @brown: #9c867a;
 @yellow: #e1c211;
