--- a/css/style.less
+++ b/css/style.less
@@ -135,11 +135,11 @@ a:focus {  color: inherit; text-decoration: none;}
 	}
 }
 .wide-container-wo{
-	@media (min-width: 1230px){
+	/*@media (min-width: 1230px){
 	  padding-left: 0px;
 	  padding-right: 0px;
 	  width: 1200px;
-	}
+	}*/
 }
 .container-bordered{
 	border-left: 1px solid @grey-fon;
