--- a/css/constants.less
+++ b/css/constants.less
@@ -17,6 +17,7 @@
 @light-grey: #ebebeb;
 @dark-grey: #a0a0a0;
 @new-grey: #d8d8d8;
+@ad-grey: #adadad;
 @text-bold: #575756;
 @text-link: #406c3e;
 @green: #0aaf5f;
