--- a/css/header_footer.less
+++ b/css/header_footer.less
@@ -53,42 +53,19 @@
     	position: static;
     	border-bottom: none;
     	height: auto;
-    }
-		& .top-logo{
-			display: none;
-		}
-		& .logo-mini{
-			display: block;
-			margin-top: 8px;
-			@media @mobile{
-				display: none;
-			}
-		}
-		& .bottom-header{
-			& .block-menu ul li{
-				margin: 13px 0;
-				@media @tablet{
-					margin: 18px 0;
-				}
-				@media @mobile{
-					margin: 0;
-				}
-			}
-		}
+    }	
 		& .search-block{
-			margin-top: 15px;
+			margin-top: 12px;
 		}
-		@media @mobile{
-			& .bottom-header{
-				margin-top: 0;
-				& ul{
-					overflow: hidden;
-					& li{
-						width: 50%;
-					}
-				}
-			}
-		}		
+		& .main-menu{
+			margin-top: 10px;
+		}
+		& .lang-block .language-switcher-locale-url{
+			margin-top: 10px;
+		}
+		& .top-logo{
+			margin: -3px 0 0 0;
+		}
 	}		
 	& .main-menu{
 		margin-top: 58px;
@@ -250,66 +227,31 @@
 	}
 }
 .somit-footer{
+	background-color: @almost-white;
 	color: @text-color;
-	font-size: 14px;
+	font-size: 18px;
 	font-weight: 400;
 	margin-top: 40px;
+	padding: 25px 0 43px 0;
 	& a{
-		color: @footer-link;
-	}
-	& .border-top{
-		border-top: solid 2px @new-grey;		
-	}
-	& .container-first.border-top{
-		padding-top: 30px;
-		border-top: solid 2px @text-color;
-	}
-	& .container-second{
-		margin-top: 30px;
-		padding: 20px 0 10px;
-	}
-	& .bottom-logo{
-		padding-bottom: 25px;
-		display: block;
-    margin: 0 auto;
-    @media @mobile{
-    	max-width: 160px;
-    	text-align: center;
-    }
-    & img{
-    	max-width: 160px;
-    }
-	}
-	& .menu-block-wrapper{		
-		& ul{
-			& li{
-				font-size: 12px;
-				font-weight: 600;
-				margin-right: 15px;					
-				text-transform: uppercase;
-				& a{					
-									
-					&:hover{
-						text-decoration: underline;
-					}
-				}				
-			}
-		}
-	}
-	& .bottom-descr{
-		padding-bottom: 20px;
-	}
-	& .bottom-text{		
-		margin-top: 84px;
-		@media @mobile_tablet{
-			margin-top: 20px;
-			text-align: right;
-		}
-	}
+		color: @text-color;
+	}	
 	& .copyright{
 		font-size: 13px;
 		padding-top: 32px;
 	}	
+	& .block-menu{
+		float: right;
+		& a{
+			display: block;
+			padding: 0 0 0 15px;
+		}
+	}
+	& .bottom-string{
+		border-top: 1px solid @ad-grey;
+		margin-top: 20px;
+		padding-top: 20px;
+	}
 }
 .lang-block{
 	& .language-switcher-locale-url{
@@ -373,10 +315,10 @@
     z-index: 500;
     &.mobile-toggle{
 		& .toggle-btn {
-			background-color: @green;
+			background-color: @blue;
 			visibility: hidden;
 			&:before, &:after{
-				background-color: @green;
+				background-color: @blue;
 			}
 			&:before {
 			    transform: rotate(45deg);
@@ -393,7 +335,7 @@
 		}
     }
 	& .toggle-btn {
-	    background-color: @green2;	        
+	    background-color: @blue;	        
 	    display: inline-block;
 	    vertical-align: middle;
 	    width: 100%;
@@ -401,7 +343,7 @@
 		border-radius: 2px;
 		position: relative;
 		&:before, &:after {
-		    background-color: @green2;
+		    background-color: @blue;
 		    content: "";
 		    display: inline-block;
 		    width: 100%;
@@ -527,7 +469,7 @@
 }
 .social-block{
 	text-align: right;
-	@media @mobile_tablet{
+	@media @mobile{
 		text-align: center;
 		padding-top: 20px;
 		clear: both;
