--- a/css/style.less
+++ b/css/style.less
@@ -6,13 +6,13 @@
 @import url('article_item.less');
 @import url('media_block.less');
 
-body { background: @grey-fon; font-family: @font-family; font-size: @basic-font; font-weight: 400; color: @text-color;}
+body { background: white; font-family: @font-family; font-size: @basic-font; font-weight: 400; color: @text-color;}
 h1,h2,h3,h4,h6,h6,p,ul,li {margin: 0; padding:0px; }
 a, a:hover { color: inherit;}
 a:focus {  color: inherit; text-decoration: none;}
 
 .node-type-event, .node-type-review, .node-type-place, .node-type-recipe, .node-type-page, .page-faq{
-	background: @white;
+	background: white;
 	& .footer-border-top{
 		border-top: solid 7px @grey-fon;
 	}
@@ -1311,34 +1311,36 @@ img.monochrome {
 	}
 }
 .small-share-block{
+	margin-top: 10px;
 	& .fa{
 		background-color: @footer-link;	
-		height: 23px;
-		width: 23px;
+		border-radius: 3px;
+		height: 29px;
+		width: 29px;
 		margin-left: 6px;
 		&.fa-facebook:before{
-			height: 15px;
-			top: 4px;
+			height: 18px;
+			top: 5px;
 		}
 		&.fa-twitter:before{
-			height: 13px;
-			top: 5px;
+			height: 16px;
+			top: 6px;
 		}
 		&.fa-telegram:before{
 			height: 12px;
 			top: 4px;
 		}
 		&.fa-vk:before{
-			height: 10px;
-			top: 7px;
+			height: 12px;
+			top: 8px;
 		}
 		&.fa-tumblr:before{
-			height: 15px;
-			top: 4px;
+			height: 18px;
+			top: 5px;
 		}
 		&.fa-instagram:before{
-			height: 15px;
-			top: 4px;
+			height: 18px;
+			top: 5px;
 		}
 	}
 }
