start main page

--- a/css/header_footer.less
+++ b/css/header_footer.less
@@ -372,15 +372,15 @@
 	    left: 0;
 	    z-index: 400;
 	    height: 100%;
-	    background-color: rgba(246,246,246,.5);
+	    background-color: @almost-white;
 	    display: block;
 	    & .container{
 	    	padding-left: 0;
 	    	padding-right: 0;
 	    }
 	    & .menu{
-			padding: 25px 15px;
-		    background-color: @grey;
+				padding: 25px 15px;
+		    background-color: @almost-white;
 		    height: 100%;
 		    overflow: hidden;
 	    }
