--- a/css/style.less
+++ b/css/style.less
@@ -126,13 +126,15 @@ a:focus {  color: inherit; text-decoration: none;}
 }
 .wide-container{
 	@media (min-width: 1230px){
-	  padding-left: 30px;
-	  padding-right: 30px;
 	  width: 1200px;
 	}
 	&.wide-container--gray{
 		background-color: @new-grey;
 	}
+}
+.container{
+	padding-left: 0;
+	padding-right: 0;
 }
 .wide-container-wo{
 	/*@media (min-width: 1230px){
