--- a/css/media_block.less
+++ b/css/media_block.less
@@ -73,10 +73,8 @@
   }
   & .category{
     color: @category-text;
-    font-size: 10px;
+    font-size: 14px;
     margin-top: 10px;
-    text-transform: uppercase;
-    letter-spacing: 2.6px;
   }
   & .kind{
     font-size: 12px;
@@ -805,17 +803,12 @@
     height: 100%;
   }
   & .text{
-    width: calc(~'100% - 30px');
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
-    padding-left: 15px;
-    padding-right: 15px;
   }
-  & .category{
-    
+  & .category{    
     color: white;
-    font-size: 12px;
     margin-top: 0;
     & a{
       background-color: @blue;
@@ -826,17 +819,21 @@
   }
   & .title{
     margin: 10px 0 20px;
+    padding: 0 170px;
     & .big{ font-size: 55px; }
     & .small{ font-size: 36px; }
     @media @medium{
+      padding: 0 120px;
       & .big{ font-size: 48px; }
       & .small{ font-size: 26px; }
     }
     @media @tablet{
+      padding: 0 100px;
       & .big{ font-size: 36px; }
       & .small{ font-size: 22px; }
     }
     @media @mobile{
+      padding: 0 30px;
       & .big{ font-size: 26px; }
       & .small{ font-size: 18px; }
     }
@@ -852,6 +849,64 @@
       color: white;
       font-size: 18px;
     }
+  }  
+}
+.articles--index.owl-carousel{
+    overflow: hidden;
+  & .owl-controls{
+    position: absolute;
+    top: 50%;
+    bottom: auto;
+    margin-top: -4.5rem;
+    width: calc(~'100% + 76px');
+    margin-left: -38px;
+    left: 0;
+    & .owl-nav{
+    & div{      
+      border-radius: 50%;
+      background-color: @blue;      
+      position: absolute;
+      width: 76px;
+      height: 76px;
+      z-index: 20;
+      text-align: center;
+      overflow: hidden;
+      font-size: 0;
+      &:before, &:after{
+        content: "";
+        background-color: white; 
+        display: inline-block;  
+        width: 13px;
+        height: 2px; 
+        position: absolute;   
+        
+      }
+      &:before{
+        transform: rotate(45deg);
+      }
+      &:after{
+        transform: rotate(-45deg);
+      }
+      &.owl-prev{
+        left: 0;   
+        &:before{
+          bottom: 33px; left: 44px; 
+        }    
+        &:after{
+          top: 33px; left: 44px; 
+        }
+      }
+      &.owl-next{
+        right: 0;
+         &:before{
+          top: 33px; right: 44px;
+        }    
+        &:after{
+          bottom: 33px; right: 44px;
+        }
+      }     
+    }
+  }
   }
 }
 .media-wrapper--medium{
