--- a/css/style.less
+++ b/css/style.less
@@ -133,8 +133,10 @@ a:focus {  color: inherit; text-decoration: none;}
 	}
 }
 .container{
+	@media (min-width: 1230px){
 	padding-left: 0;
 	padding-right: 0;
+	}
 }
 .wide-container-wo{
 	/*@media (min-width: 1230px){
