--- a/css/style.less
+++ b/css/style.less
@@ -125,18 +125,15 @@ a:focus {  color: inherit; text-decoration: none;}
 	margin-bottom: 30px;
 }
 .wide-container{
-	@media (min-width: 1230px){
-	  width: 1200px;
-	}
 	&.wide-container--gray{
 		background-color: @new-grey;
 	}
 }
 .container{
-	@media (min-width: 1230px){
+	/*@media (min-width: 1230px){
 	padding-left: 0;
 	padding-right: 0;
-	}
+	}*/
 }
 .wide-container-wo{
 	/*@media (min-width: 1230px){
@@ -1621,8 +1618,7 @@ img.monochrome {
 }
 .view-display-id-new_reviews{
   & .white-container{
-    border-radius: 5px;
-    padding-top: 30px;
+    padding-top: 20px;
     margin-bottom: 30px;
   }
 }
@@ -1635,11 +1631,18 @@ img.monochrome {
 }
 .index-head{
   font-size: 24px;
-  font-family: @special-font;
+  font-weight: bold;
   line-height: 1.33;
-  text-align: center;
   margin: 30px 0;
   position: relative;
+  overflow: hidden;
+  & span{
+  	float: left;
+  }
+  & a{
+  	float: right;
+  	color: @blue;
+  }
 }
 .view-display-id-pop_places{
 	background-color: white;
