--- a/css/constants.less
+++ b/css/constants.less
@@ -33,6 +33,7 @@
 @category-text: #39393a;
 @event-fon: #f6eb3d;
 @popular-fon: #35a0cd;
+@social: #55acee;
 @hover_title: lighten(@text-color,40%);
 @notebook: ~"(max-height: 800px)";
 @mobile: ~"(max-width: 767px)";
