--- a/css/style.less
+++ b/css/style.less
@@ -109,7 +109,7 @@ a:focus {  color: inherit; text-decoration: none;}
 	}
 }
 .white-container{
-	background: @white;
+	/*background: @white;
 	@media (min-width: 1230px){
 	   padding-left: 30px;
 	   padding-right: 30px;
@@ -119,7 +119,7 @@ a:focus {  color: inherit; text-decoration: none;}
 		padding-left: 0;
 		padding-right: 0;
 		width: 100%;
-	}
+	}*/
 }
 .margin-bottom-30{
 	margin-bottom: 30px;
@@ -478,37 +478,25 @@ html.js fieldset.collapsed{
 	position: relative;
 	&:hover{
 		background: none;
-	}
-	&:before{
-		content: "";
-		position: absolute;
-		width: 100%;
-		height: 1px;
-		background-color: @text-color;
-		left: 0;
-		top: 50%;
-		z-index: 10;
-	}
+	}	
 	& li{
 		width: auto;
 		display: inline-block;
 	}
 	& a{
-		border: 1px solid @text-color;
-		border-radius: 3px;
-		background-color: @grey-fon;
-		color: @text-color;
+		border-radius: 4px;
+		background-color: @blue;
+		color: white;
 		display: inline-block;
-		letter-spacing: 2px;
-		font-size: 14px;
-		text-transform: uppercase;
+		font-size: 24px;
+		font-weight: bold;
 		transition: all 0.4s ease-in;
-		padding: 10px 30px;
+		padding: 10px 40px;
 		position: relative;
 		z-index: 50;
 		&:hover{
 			text-decoration: none;
-			background: lighten(@grey-fon, 20%);
+			background: lighten(@blue, 20%);
 		}
 	}
 }
@@ -1259,10 +1247,17 @@ img.monochrome {
 }
 .big-share-block{
 	padding: 30px;
+	margin: 30px 0;
+	.page-views &{
+		background-color: @almost-white;
+		border-radius: 4px;
+		margin: 30px 0;
+		padding: 30px 30px 50px 30px;
+	}
 	& .title{
 	  font-size: 32px;
 	  line-height: 1.07; 
-	  margin-bottom: 10px;
+	  margin-bottom: 22px;
 	  @media @mobile_tablet{
 	  	font-size: 24px;
 	  }
@@ -1285,8 +1280,8 @@ img.monochrome {
 		padding: 12px 0px;
     text-align: center;
     &:hover{
-    	background-color: @blue;
-    	border-color: @blue;
+    	background-color: @social;
+    	border-color: @social;
     	color: white;
     	text-decoration: none;   
     	opacity: 1; 	
@@ -1558,10 +1553,10 @@ img.monochrome {
 }
 .page-entertainment, .page-culture, .page-cuisine{
 	& .view-id-blog{
-		margin-bottom: 30px;
+		margin-bottom: 60px;
 	}
 	& .border-bottom{
-		border-bottom: 2px solid @grey;
+		border-bottom: 2px solid @new-grey;
     clear: both;
     margin-left: 15px;
     margin-right: 15px;
@@ -1578,32 +1573,29 @@ img.monochrome {
 		margin-bottom: 30px;
 	}
 	& .border-bottom{
-		background-color: @new-grey;
-		height: 2px;
-		width: calc(~'100% - 30px');
-    overflow: hidden;
-    margin: 0 15px;
+		border-bottom: 2px solid @new-grey;
+    clear: both;
+    margin-left: 15px;
+    margin-right: 15px;
 	}
 }
 .region-highlighted{
 	background-color: white;
-	margin-top: -2px;
-	padding-top: 2px;
 	position: relative;
 	z-index: 10;
 	& .block-menu{
-		border-top: solid 2px #d8d8d8;
-    padding-top: 15px;
-    padding-bottom: 15px;
-    min-height: 57px;	
+		border-top: solid 1px #e3e3e3;
+		border-bottom: solid 1px #e3e3e3;
+    padding-top: 11px;
+    padding-bottom: 11px;
+    min-height: 55px;	
     text-align: center;	
     & li{
 			color: @middle-text;
 			cursor: pointer;
 			display: inline-block;
-			font-size: 12px;
+			font-size: 15px;
 			margin-right: 10px;
-			text-transform: uppercase;
 			vertical-align: middle;
 			float: none;
 			@media @mobile_tablet{
@@ -1614,12 +1606,12 @@ img.monochrome {
 				margin-bottom: 10px;
 			}
 			&.active-trail a, & a.active{
-				border-radius: 3px;
-				background-color: @grey-fon;
+				color: @blue;
+				font-weight: bold;
 			}
 			&:hover{
 				& a{
-					color: darken(@middle-text, 40%);
+					color: @blue;
 				}
 			}
 			& a{	
@@ -1677,11 +1669,8 @@ img.monochrome {
   }
 }
 .view-display-id-top3_reviews{
-  padding-top: 30px;
-  padding-bottom: 0px;
-  margin-top: 30px;
+  margin-top: 50px;
   margin-bottom: 30px;
-  border-radius: 5px;
 }
 .index-head{
   font-size: 24px;
@@ -1787,9 +1776,6 @@ img.monochrome {
 				stroke: @text-color;				
 			}
 		}
-}
-.view-display-id-pop_reviews{
-  margin-bottom: 30px;
 }
 #block-block-3, #block-block-4{
   text-align: center;
