--- a/css/header_footer.less
+++ b/css/header_footer.less
@@ -88,7 +88,7 @@
 				float: none;
 				display: inline-block;
 				margin: 0 15px;
-				&.active-trail>a { 
+				&.active-trail>a, & a.active { 
 					color: @blue;
 					border-color: @blue;
 				}					
