--- a/css/detail.less
+++ b/css/detail.less
@@ -2,13 +2,13 @@
 @main-photo-height: 793px;
 
 .introduction{
-	border-bottom: solid 1px @grey;
-	font-size: 24px;
+	border-bottom: solid 1px @grey-fon;
+	font-size: 24px !important;
 	font-family: @special-font;
-	line-height: 1.42;
+	line-height: 1.42 !important;
 	color: @middle-text;
-	padding-bottom: 40px;
-	margin-bottom: 30px;
+	padding-bottom: 30px;
+	margin-bottom: 40px !important;
 	@media @mobile_tablet{
 		font-size: 18px;
 	}
@@ -472,30 +472,48 @@
 		}				
 	}
 	& .main-info{
-		bottom: 0;
+		top: 0;
 		color: @white;
-		padding: 50px 80px;
 		position: absolute;
-		max-width: 800px;
-		@media @mobile_tablet{
-			padding: 10px 20px 20px;
-		}
-		&--bottom{
-			padding: 50px 80px 30px 80px;
-			@media @mobile_tablet{
-				padding: 10px 10px 20px;
+		height: 100%;
+		width: 100%;
+		& .category{
+			position: absolute;
+			top: 40px;
+			left: 43px;
+			background-color: @blue;
+	    padding: 7px 30px;
+	    border-radius: 30px;
+	    display: inline-block;
+	    color:white;
+	    position: absolute;
+	    z-index: 10;
+	    font-size: 14px;
+	    & .date {
+		    display: inline-block;
+		    margin-right: 5px;
+			}
+			& a {
+		    display: inline-block;
+		    margin: 0 5px;
 			}
 		}
-		&.main-info-center{
-			bottom: 50%;
-			transform: translateY(50%);
-			max-width: 100%;
-			width: 100%;
-		}
+		& .statistic{
+			position: absolute;
+			bottom: 50px;
+			left: 60px;
+	    & path, & .count{
+	      fill: white;
+	      color: white;
+	    }
+	  }
 		& .main-title{
-			font-size: 55px;
-			line-height: 1;
-			margin: 5px 0 0 0;
+			font-size: 48px;
+			line-height: 1.25;
+			max-width: 800px;
+			position: absolute;
+			bottom: 93px;
+			left: 60px;
 			@media @mobile_tablet{
 				font-size: 25px;
 			}
@@ -634,6 +652,8 @@
 		}
 		& p{
 			margin: 10px 0;
+			font-size: 18px;
+			line-height: 1.56;
 		}
 		&  h2{
 	    font-size: 26px;
@@ -647,12 +667,14 @@
 	}
 }
 .article-contact-block{
+	font-size: 18px;
 	margin: 0 0 40px 0;
 	padding: 50px 80px 0;
 	@media @mobile{
 		padding: 20px 10px 0;
 	}
 	& .article-title{
+		font-weight: bold;
 		font-size: 18px;
 		margin: 0;
 	}
@@ -661,32 +683,17 @@
 		overflow: hidden;
 	}
 	& .item-label{
-		color: @light-text;
-		float: left;
-		display: block;
-		width: 125px;
-		@media @mobile{
-			float: none;
-		    width: auto;
-		    display: inline-block;
-		    margin-right: 10px;
-		}
+		font-weight: bold;
 	}
 	& .item-value{
-		display: block;
-		margin-left: 120px;
-		@media @mobile{
-			margin-left: 0;
-    		display: inline-block;
-		}
+		font-weight: normal;
 	}
 	& .show_map{
 		cursor: pointer;
-		text-decoration: underline;
 	}
 }
 & .tags-block{
-	margin: 50px 0 30px;
+	margin: 50px 0 70px;
 	padding: 0 170px;
 	@media @mobile_tablet{
 		padding: 0 0px;
@@ -709,8 +716,8 @@
   	border: solid 1px @dark-grey;
   	padding: 7px 10px;
 		&:hover{
-			color: @orange;
-			border-color: @orange;
+			color: @blue;
+			border-color: @blue;
 			text-decoration: none;
 		}
 	}
@@ -971,14 +978,16 @@
 .media-detail{
 	.statistic{
 		display: inline-block;
-		opacity: .3;
 		margin-right: 20px;
 	  & .count{
-	    color: black;
+	    color: @light-text;
 	    font-size: 18px;
 	    line-height: 1.2;
 	    margin-left: 10px;
 	    vertical-align: middle;
+	  }
+	  & path{
+	  	fill: @light-text;
 	  }
 	  & svg{
 	    width: 30px;
